# ai-course-test-platform

./: .gitignore  README.md  email_notifier.py  gas_deployer.py  gas_deployer_batch.py  main.py  pyproject.toml  quiz_generator.py  quiz_generator_batch.py  requirements.txt  test_analyzer.py  test_generator.py  test_generator_batch.py
QAPool/en/l0-ai-citizen/: m2.json
QAPool/en/l1-ai-coder/: m1.json  m2.json  m3.json
QAPool/en/l1-ai-professional/: m1.json  m2.json  m3.json  m4.json
QAPool/eng/L0/M3/: m3.json
QAPool/eng/L1/M1/: m1.json
QAPool/eng/L1/M2/: m2.json
QAPool/eng/L1/M3/: m3.json
QAPool/eng/L1/M4/: m4.json
QAPool/eng/L1/M5/: m5.json
QAPool/eng/L1/M6/: m6.json
QAPool/rs/l0-ai-citizen/: m2.json
QATests/: l0-ai-citizen.json  l1-ai-coder.json  l1-ai-professional.json
prompts/: test_analyzer_prompt.md
